flapivor/tests/m3/hopix/typechecker/good/14-binary-function.hopix
def fst : Int * Int -> Int (x, y) = x

val main : Int = fst (3, 4)