flapivor/tests/m3/hopix/typechecker/bad/15-invalid-function-call.hopix
def f : Int -> Int (x) = x

val main : Int = f (0, 1)